Login/Signup code completed and tested

--- a/project1/templates/error.html
+++ b/project1/templates/error.html
@@ -8,5 +8,6 @@
 {% block body %}
 <div class = "error-msg">
 	<h3>{{ error }}</h3>
+	<a href="{{ url_for('index') }}"><span>Go back to signup again!</span></a>
 </div>
 {% endblock %}
