--- a/project1/templates/temp_error.html
+++ b/project1/templates/temp_error.html
@@ -2,14 +2,13 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-<h1>	Welcome to BookBee!</h1>
+<h1>	Welcome to BookBee! Hello!</h1>
 {% endblock %}
 
 {% block body %}
 <div class = "error-msg">
-	<h3>{% for name in usernames %}
-		{{ name }}
-		{% endfor %}
+	<h3>
+		{{ error }}
 	</h3>
 </div>
 {% endblock %}
