--- a/project1/templates/home.html
+++ b/project1/templates/home.html
@@ -5,5 +5,8 @@
 {% endblock %}
 
 {% block body %}
-	
+<form action="{{ url_for('logout') }}" method="POST">
+	<input type="hidden" name="username" value= "{{ username }}" />	
+	<button id="logout_button">Logout</button>
+</form>
 {% endblock %}
