--- a/project1/templates/layout.html
+++ b/project1/templates/layout.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Website!</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+	    {% block header %}{% endblock %}
     </head>
     <body>
         <h1>{% block heading %}{% endblock %}</h1>
