fixed only one user login at a time

--- a/project1/templates/book_info.html
+++ b/project1/templates/book_info.html
@@ -4,3 +4,10 @@
 
 {% block body %}
 
+<div class = "form" id = "logout_form"> 
+	<form action="{{ url_for('logout') }}" method="POST">
+		<input type="hidden" name="username" value= "{{ username }}" />	
+		<button id="logout_button">Logout</button>
+	</form>
+</div>
+{% blockend %}
