--- a/project1/templates/home.html
+++ b/project1/templates/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class = "form" id = "logout_form"> 
+<div class = "form" id = "logout_form" align="right"> 
 	<form action="{{ url_for('logout') }}" method="POST">
 		<input type="hidden" name="username" value= "{{ username }}" />	
 		<button id="logout_button">Logout</button>
