--- a/project1/templates/search_result.html
+++ b/project1/templates/search_result.html
@@ -57,7 +57,7 @@
 		<td>{{ book.year }}</td>
 	 	<td>{{ review_count[loop.index0]}}</td>
 		<td>{{ avg_score[loop.index0] }}</td>
-		<td><a href = {{ url_for('book_info', isbn=book.isbn) }}> see book_info</a></td>
+		<td><a href = {{ url_for('book_info', isbn=book.isbn, title=book.title, author=book.author, year=book.year, post=0) }}> see book_info</a></td>
 	</tr>
 {% endfor %}
 </table>
