--- a/project1/templates/index.html
+++ b/project1/templates/index.html
@@ -1,28 +1,115 @@
 {% extends "layout.html" %}
 
+{% block header %}
+<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+<style>
+	.col_style
+	{
+		margin: 4px;
+	}
+	.row_style
+	{
+		margin-top:10px;
+	}
+	body
+	{
+		display: grid;
+		grid-template-rows: 1fr 6fr 6fr;
+		grid-template-columns: 1fr 1fr; 
+	}
+	header
+	{
+		margin-top:10px;
+		margin-bottom:10px;
+		grid-column-start:1;
+		grid-column-end:3;
+		grid-row:1/2;
+	}
+	img
+	{
+		grid-column: 1/3;
+		grid-row: 2/3;
+		height: 100%;
+		width: 100%;
+		background-color: grey;
+	}
+	#loginform
+	{
+		margin-left: 10px;
+		margin-top:15px;
+		grid-column:1/2;
+		grid-row:3/4;
+	}
+	#signupform
+	{
+		margin-top:15px;
+		grid-column:2/3;
+		grid-row:3/4;
+		margin-left:250px;
+	}
+	.form
+	{
+		border-style: solid;
+		border-color:#D3D3D3;
+		border-width: 1px;
+		width:500px;
+		padding:12px;
+	}
+</style>
+<title>Bookbee</title>
+{% endblock %}
+
 {% block heading %}
-<h1>	Welcome to BookBee! I am main page</h1>
+<header align="center"><h1 align="center"> Welcome to BookBee Reader!</h1></header>
 {% endblock %}
 
 {% block body %}
-<div class="form" id="loginform">
-	<h1>LOGIN</h1>
-	<form action="{{url_for('home') }}" method="post" name="loginform">
-		<input required type="text" name="username" placeholder="Enter username">
-		<input required type="password" name="password" placeholder="Enter password">
-		<button>Login</button>
-	</form>
-</div>
+	<img src="/static/book-flatlay-hands.jpg" alt="book-in-grass">
+	<div id="loginform"> 
+		<h2>Login to find reviews of over 5000 books!</h2>
+		<p>
+		<form action="{{url_for('home') }}" method="post" name="loginform" class="form">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input required type="text" name="username" placeholder="Enter username" id="username" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input required type="password" name="password" placeholder="Enter password" id="password" class="form-control">
+			</div>
+			<div class="form-group">
+				<button class="btn btn-primary">Login</button>
+			</div>
+		</form>
+	</div>
 
-<div class="form" id="signupform">
-	<h1>SIGNUP</h1>
-	<form action="{{url_for('index')}}" method="post" name="signupform">
-		<input required type="text" name="username" placeholder="Enterusername">
-		<input required type="email" name="emailid" placeholder="Enter Email-id">
-		<input required type="password" name="create_password" placeholder="Create Password">
-		<input required type="password" name="confirm_password" placeholder="Confirm Password">
-		<button>Signup</button>
-	</form>
-</div>
+	<div id="signupform">
+		<h2>Signup with us!</h2>
+		<p>
+		{% if msg %}
+		<h4 class="alert alert-success">Signup Successful. You may login now.</h3>
+		{% endif %}
+		<form action="{{url_for('index')}}" method="post" name="signupform" class="form">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input required type="text" name="username" placeholder="Enter username" id="username" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="emailid">Email-id</label>
+				<input required type="email" name="emailid" placeholder="Enter Email-id" id="email" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="create_passowrd">Create Password</label>
+				<input required type="password" name="create_password" placeholder="Create Password" id="create_password" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="confirm_password">Confirm Password</label>
+				<input required type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password" class="form-control">
+			</div>
+			<div class="form-group">
+				<button class="btn btn-primary">Signup</button>
+			</div>
+		</form>
+	</div>
 {% endblock %}
 
