designed book_info page, problem with logout-button

--- a/project1/templates/search_result.html
+++ b/project1/templates/search_result.html
@@ -7,7 +7,7 @@
 		body
 		{
 			display: grid;
-			grid-template-rows:2fr 9fr 1fr;
+			grid-template-rows:100px 9fr 1fr;
 			grid-template-columns:2fr 8fr 1fr;
 		}
 		h1	
@@ -19,7 +19,7 @@
 			margin-top: 25px;
 			margin-left: auto;
 			margin-right: auto;	
-			margin-bottom: 25px;
+			margin-bottom: auto;
 		}
 		table
 		{
